test/Fail/Issue3582.agda
{-# OPTIONS --prop #-}

postulate
  f : Prop → Prop
  P : Prop₁

x : Prop
x = f P
